fix(entry): harden payment-status error handling and deterministic tests (#30)